fix: test Redis

--- a/gRPC_Sender/appsettings.json
+++ b/gRPC_Sender/appsettings.json
@@ -13,5 +13,13 @@
         "Protocols": "Http2"
       }
     }
+  },
+  "Redis": {
+    "Port": 6379,
+    "Host": "localhost",
+    "Password": "redis",
+    "Ssl": false,
+    "AbortOnConnectFail": false
   }
+  // Другие настройки
 }
